# prefect_exercise

./: ARCHITECTTURE.md  EXTENDING.md  EXTENIG.md  PYTHON_API.md  README.md  TESTING.md  pyproject.toml
data/: pipeline.db
data/output/: sample_processed.json
demo_data/: sample.txt
src/: cli.py  config.py
src/database/: __init__.py  models.py
src/jobs/: __init__.py  job_a.py  job_b.py  job_c.py
src/pipeline/: __init__.py  flows.py  parallel.py  wrappers.py
src/prefect_pipeline/: __init__.py  cli.py
src/prefect_pipeline/database/: __init__.py  models.py
src/prefect_pipeline/jobs/: __init__.py  base.py  job_a.py  job_b.py  job_c.py
src/prefect_pipeline/pipeline/: __init__.py  flows.py  parallel.py  wrappers.py
src/prefect_pipeline/validators/: __init__.py
src/validators/: __init__.py  input_validators.py
tests/: __init__.py  conftest.py  test_cli.py  test_database.py  test_jobs.py  test_parallel.py  test_pipeline.py  test_validators.py
