[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prefect-pipeline"
version = "0.1.0"
description = "A Prefect pipeline with class-based tasks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prefect>=3.0.0",
    "peewee>=3.17.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
pipeline = "src.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonfiles = ["test_*.py"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true